<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/drawer_profile"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/drawer_profile" />

    <item
        android:id="@+id/drawer_favorites"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/drawer_favorites" />

    <item
        android:id="@+id/drawer_bookings"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/drawer_bookings" />

    <item
        android:id="@+id/drawer_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/drawer_settings" />

    <item
        android:id="@+id/drawer_admin_dashboard"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/drawer_admin_dashboard"
        android:visible="false" />

    <item
        android:id="@+id/drawer_logout"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/drawer_logout" />

</menu>

